[project]
name = "psp-server"
version = "0.1.0"
description = "Park Slope Parents Message Ingestion System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API calls
    "requests>=2.31.0",
    # PostgreSQL drivers
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Environment/config
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # API server (Phase 5)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Rate limiting (Phase 5)
    "slowapi>=0.1.9",
    # Scheduling (Phase 4)
    "apscheduler>=3.10.4",
]

[project.scripts]
psp = "cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]
